Backend for Ticket, Rate Service. Fix DateTimeFormatter, Security, Date -> Instant