@@ -2,6 +2,7 @@ package com.example.Backend.service.Rating;
 
 import com.example.Backend.dto.request.Rating.RateServiceCreationRequest;
 import com.example.Backend.dto.request.Rating.RateServiceUpdateRequest;
+import com.example.Backend.dto.response.PageResponse;
 import com.example.Backend.dto.response.Rating.RateServiceResponse;
 import com.example.Backend.entity.Rating.RateService;
 import com.example.Backend.entity.Service.ServiceEntity;
@@ -12,10 +13,16 @@ import com.example.Backend.mapper.Rating.RateServiceMapper;
 import com.example.Backend.repository.Rating.RateServiceRepository;
 import com.example.Backend.repository.Service.ServiceRepository; // Cập nhật import
 import com.example.Backend.repository.User.UserRepository;
+import com.example.Backend.service.DateTimeFormatter;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.security.access.prepost.PostAuthorize;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -26,6 +33,7 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @Slf4j
 public class RateServiceService {
+    DateTimeFormatter dateTimeFormatter;
     RateServiceRepository rateServiceRepository;
     ServiceRepository serviceRepository;
     UserRepository userRepository;
@@ -37,17 +45,37 @@ public class RateServiceService {
         rateService.setServiceEntity(serviceRepository.findById(request.getServiceId())
                 .orElseThrow(()-> new AppException(ErrorCode.NOT_EXISTED)));
 
-        rateService.setUser(userRepository.findById(request.getUserId())
-                .orElseThrow(()-> new AppException(ErrorCode.NOT_EXISTED)));
+        var context = SecurityContextHolder.getContext();
+        String email = context.getAuthentication().getName();
 
-        RateService savedRateService = rateServiceRepository.save(rateService);
-        return rateServiceMapper.toResponse(savedRateService);
+        User user = userRepository.findByEmail(email).orElseThrow(
+                () -> new AppException(ErrorCode.NOT_EXISTED));
+
+        rateService.setUser(user);
+
+        return rateServiceMapper.toResponse(rateServiceRepository.save(rateService));
     }
 
-    public List<RateServiceResponse> getAllRateServices() {
-        return rateServiceRepository.findAll().stream()
-                .map(rateServiceMapper::toResponse)
-                .collect(Collectors.toList());
+    public PageResponse<RateServiceResponse> getRateServices(String idService, int page, int size) {
+        Sort sort = Sort.by(Sort.Direction.DESC, "dateUpdate").ascending();
+
+        Pageable pageable = PageRequest.of(page-1,size,sort);
+
+        var pageData = rateServiceRepository.findByServiceEntity_Id(idService, pageable);
+
+        var dataMapper = pageData.getContent().stream().map(rating -> {
+            RateServiceResponse rateServiceResponses = rateServiceMapper.toResponse(rating);
+            rateServiceResponses.setFormatDate(dateTimeFormatter.format(rateServiceResponses.getDateUpdate()));
+            return rateServiceResponses;
+        }).toList();
+
+        return PageResponse.<RateServiceResponse>builder()
+                .totalPages(pageData.getTotalPages())
+                .pageSize(size)
+                .currentPage(page)
+                .totalElements(pageData.getTotalElements())
+                .data(dataMapper)
+                .build();
     }
 
     public RateServiceResponse getRateServiceById(String id) {
@@ -56,12 +84,14 @@ public class RateServiceService {
         return rateServiceMapper.toResponse(rateService);
     }
 
+    @PostAuthorize("returnObject.user.email == authentication.name or hasRole('MANAGER')")
     public void deleteRateService(String id) {
         RateService rateService = rateServiceRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.NOT_EXISTED));
         rateServiceRepository.delete(rateService);
     }
 
+    @PostAuthorize("returnObject.user.email == authentication.name or hasRole('MANAGER')")
     public RateServiceResponse updateRateService(RateServiceUpdateRequest request, String id) {
         RateService rateService = rateServiceRepository.findById(id).orElseThrow(() -> new AppException(ErrorCode.NOT_EXISTED));
         rateServiceMapper.updateRateService(rateService, request);
